--- a/istriangle.css
+++ b/istriangle.css
@@ -1,3 +1,46 @@
-.container{
+
+.website-name{
+    font-weight: bold;
+    padding-left: 0.5rem;
+    
+}
+.navigation{
     text-align: center;
+    background-color: rgb(167, 227, 255);
+    border-bottom-style:solid;
+    margin-bottom: 10px;
+}
+.nav-main{
+    display: inline;
+}
+.nav-pills{
+    text-align: center;
+    font-weight: normal;
+    font-size:120%;
+}
+.nav-pills .nav-main{
+    padding: 0rem 2.0rem;
+    font-size: 1.15rem;
+    font-weight: normal;
+}
+.link{
+    text-decoration: none;
+    padding: 0.5rem;
+    color: black;
+}
+.navigation .link-active{
+    font-weight: bolder;
+    background-color: rgb(143, 208, 238);
+    border-radius: 0.5rem;
+}
+.container{
+    padding: 5px;
+    text-align: center;
+    max-width: 400px;
+    background-color: rgb(255, 161, 161);
+    
+}
+label{
+    padding-bottom: 1rem;
+    font-size: large;
 }
