--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+body {
+  
+  font-family: 'Montserrat', sans-serif;
+}
 
 .website-name{
     font-weight: bold;
@@ -25,19 +30,21 @@
 }
 .link{
     text-decoration: none;
+    background-color: rgb(143, 208, 238);
+    border-radius: 0.5rem;
     padding: 0.5rem;
     color: black;
 }
 .navigation .link-active{
     font-weight: bolder;
-    background-color: rgb(143, 208, 238);
+    background-color: rgb(45, 134, 175);
     border-radius: 0.5rem;
 }
 .container{
     padding: 5px;
     text-align: center;
     max-width: 400px;
-    background-color: rgb(255, 161, 161);
+    background-color: #bdfca9;
     
 }
 label{
